--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+    <dimen name="activity_top_margin">60dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="text_main">36dp</dimen>
+    <dimen name="text_secondary">24dp</dimen>
 </resources>
