--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -98,7 +98,7 @@
         android:visibility="visible"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_search_category_default" />
+        android:src="@android:drawable/ic_menu_search" />
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fabClose"
         android:layout_width="wrap_content"
